# patan

./: .env.example  .gitignore  README.md  crawler.py  pyproject.toml  requirements.txt  setup.py  tempCodeRunnerFile.py
examples/: beauty.py  eastmoney.py  mptest.py
examples/eastmoney/: items.py  middlewares.py  patan.json  pipelines.py
examples/eastmoney/spiders/: eastmoney.py
patan/: __init__.py  __main__.py  __version__.py  downloader.py  engine.py  filters.py  item.py  middleware.py  patan.py  request.py  response.py  scheduler.py  spiders.py  utils.py  worker.py
patan/channels/douyin/: __init__.py  client.py  config.py  crypto.py  models.py
patan/core/: __init__.py  config.py  dedup.py  downloader.py  engine.py  http.py  logging.py  models.py  scheduler.py
patan/downloadermws/: __init__.py  timeout.py  useragent.py
patan/http/: __init__.py  request.py  response.py
patan/settings/: __init__.py  default.json
patan/spidermws/: __init__.py  depth.py  httperror.py
patan/spiders/: __init__.py  base_spider.py
patan/utils/: __init__.py  browser.py  dup_filters.py  exceptions.py  paths.py  query.py  randoms.py  text.py  times.py  urls.py
